# IAF

./: .gitignore  COMPARATIVA_COMPETITIVA.md  Cargo.toml  DOCUMENTACION_CLIENTE.md  DOCUMENTACION_INTERNA.md  DOCUMENTATION.md  MEMORIES.md  agent_original_backup.rs  apply_fixes.py  apply_fixes2.py  apply_fixes3.py  apply_fixes_final.py  brace_check.py  build_server.ps1  cargo_check_final.txt  cargo_check_final_v2.txt  cargo_check_latest.txt  cargo_check_output.txt  cargo_check_result.txt  cargo_check_v10.txt  cargo_check_v2.txt  cargo_check_v3.txt  cargo_check_v4.txt  cargo_check_v5.txt  cargo_check_v6.txt  cargo_check_v7.txt  cargo_check_v8.txt  cargo_check_v9.txt  cargo_orig.txt  check2.txt  check_err.txt  check_final.txt  check_final2.txt  check_final_output.txt  check_out.txt  check_out7.txt  check_out8.txt  check_output.txt  check_output2.txt  check_result.txt  (+18 more)
.config/: local_projects.json  prompts.json
.config/chats/: 17768a78-93f3-4772-937d-9de1c8ff3064.json  485bbad5-2a04-4238-b428-ac0c22ff1738.json  504a0ee0-c6b0-4fd5-8f67-61065f566a05.json  (+8 more)
Colección de Handouts - Francisco González/: union.py
client/: Cargo.toml  build_client.ps1  check_client.ps1  run_client.ps1
client/src/: main.rs
prompts/: default_system_prompt.txt  study_system_prompt.txt
public/: app.js  index.html  style.css
scripts/: add_fallo_endpoint.py  fix_agent.py  fix_agent2.py  fix_agent3.py  fix_agent_v2.py  fix_agent_v3.py  fix_c7.py  fix_main.ps1  fix_main.py  generate_keys.ps1  sign_nonce.ps1
src/: agent (1).rs  agent (2).rs  agent.rs  agent_restored.rs  auth.rs  client_protocol.rs  desktop.rs  embeddings.rs  lib.rs  main.rs  scraper.rs  state.rs  study.rs  sub_agent.rs  sync.rs  utils.rs  validator.rs
target_check/: .rustc_info.json
tests/: exhaustive_tests.rs  frontend_regression_tests.js  integration_tests.rs  reg_stu_tests.rs  regression_tests.rs
(+276 files in other folders)
