[package]
name = "iaf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3"
regex = "1"
walkdir = "2"
urlencoding = "2.1"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
rdev = "0.5"
mime_guess = "2.0.0-alpha.6"
base64 = "0.22"
dotenv = "0.15"
