[package]
name = "iaf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors", "auth"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
tempfile = "3"
regex = "1"
walkdir = "2"
urlencoding = "2.1"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
rdev = "0.5"
mime_guess = "2.0.0-alpha.6"
base64 = "0.22"
dotenv = "0.15"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
argon2 = "0.5"
sha2 = "0.10"
parking_lot = "0.12"
once_cell = "1.19"
pdf-extract = "0.7"
zip = "1.1"
[dev-dependencies]
tokio-test = "0.4"